layout issue

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -15,6 +15,7 @@ body {
 }
 .body-black {
     background-color: black;
+    z-index: -20;
 }
 .body-whitesmoke {
     background-color: whitesmoke;
